--- a/refinedstorage-rei-integration-common/src/main/resources/assets/refinedstorage_rei_integration/lang/en_us.json
+++ b/refinedstorage-rei-integration-common/src/main/resources/assets/refinedstorage_rei_integration/lang/en_us.json
@@ -3,5 +3,5 @@
   "gui.refinedstorage_rei_integration.grid.synchronizer.help": "Sync the search box text to the REI filter.",
   "gui.refinedstorage_rei_integration.grid.synchronizer.two_way": "REI two-way",
   "gui.refinedstorage_rei_integration.grid.synchronizer.two_way.help": "Sync the search box text to the REI filter, and the REI filter to the search box text.",
-  "block.refinedstorage_rei_integration.controller.fully_charged": "Fully charged Controller"
+  "block.refinedstorage_rei_integration.controller.fully_charged": "Fully charged Controllers"
 }
